following book-app tutorial 2

--- a/src/app/have/set-details/set-details.component.html
+++ b/src/app/have/set-details/set-details.component.html
@@ -1,24 +1,24 @@
 <div class="row">
   <div class="col-md-12">
-    <h2>Set Name</h2>
+    <h2>{{brickset.setName}}</h2>
   </div>
 </div>
 
 <div class="row">
   <div class="col-md-12">
-<h3>Set Number</h3>
+<h3>{{brickset.setNumber}}</h3>
   </div>
 </div>
 
 <div class="row">
   <div class="col-md-12">
-<p>Theme</p>
+<p>{{brickset.theme}}</p>
   </div>
 </div>
 
 <div class="row">
   <div class="col-md-12">
-    <img src="" alt="" class="img-responsive" />
+    <img src="{{brickset.boxArt}}" alt="" class="img-responsive" />
   </div>
 </div>
 <div class="row">
