--- a/src/app/have/set-list/set-list.component.html
+++ b/src/app/have/set-list/set-list.component.html
@@ -1,7 +1,10 @@
-<div class="row mb-3" *ngFor="let brickset of mySets">
+<div class="row mb-3" >
   <div class="col-md-12">
-    <button class="btn btn-danger">Add Set</button>
-    <a href="#" class="list-group-item clearfix">
+    <app-legoset *ngFor="let bricksetEl of mySets" [brickset]="bricksetEl"
+    (bricksetSelected)="handleBricksetSelected(bricksetEl)"
+    ></app-legoset>
+    <!-- <button class="btn btn-danger">Add Set</button> -->
+    <!-- <a href="#" class="list-group-item clearfix">
       <div class="float-left">
         <h4 class="list-group-item-heading">{{ brickset.setName}}</h4>
         <p class="list-group-item-text mb-0">{{ brickset.setNumber }}</p>
@@ -14,7 +17,7 @@
           style="max-height: 75px"
         />
       </div>
-    </a>
+    </a> -->
 
   </div>
 </div>
