--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,10 @@
 <div class="container">
-  <app-navigation></app-navigation>
+  <app-navigation (currentPage)="onNavigatePage($event)"></app-navigation>
   <div class="row">
     <div class="col-md-10 mx-auto">
-   <app-have></app-have>
+   <app-have *ngIf="pageDisplayed ==='have'"></app-have>
    <hr />
-<app-want></app-want>
+<app-want *ngIf="pageDisplayed ==='want'"></app-want>
     </div>
   </div>
 </div>
