--- a/src/app/have/have.component.html
+++ b/src/app/have/have.component.html
@@ -1,9 +1,14 @@
 <div class="row justify-content-between">
   <div class="col-md-8">
     <h1>My Brick Inventory</h1>
-    <app-set-list></app-set-list>
+    <app-set-list
+    (currentSelectedBrickset)="selectedBrickset=$event"></app-set-list>
   </div>
   <div class="col-md-4">
-    <app-set-details></app-set-details>
+    <ng-template #infoText><p>details here</p></ng-template>
+    <app-set-details
+    *ngIf="selectedBrickset; else infoText"
+    [brickset]="selectedBrickset"
+    ></app-set-details>
   </div>
 </div>
