--- a/src/app/shared/navigation/navigation.component.html
+++ b/src/app/shared/navigation/navigation.component.html
@@ -7,7 +7,7 @@
   data-target="#navbarSupportedContent"
   aria-controls="navbarSupportedContent"
   aria-expanded="false"
-  aria-label="Toggle navigation">
+  aria-label="Toggle navigation"
   (click)="collapsed = !collapsed"
   >
    <span class="navbar-toggler-icon"></span>
@@ -15,13 +15,15 @@
 
   <div class="collapse navbar-collapse"
   id="navbarSupportedContent">
-  
+
     <ul class="navbar-nav mr-auto">
       <li class="nav-item active">
-        <a class="nav-link" href="#">Inventory<span class="sr-only">(current)</span></a>
+        <a class="nav-link" href="#" (click)="onSelectPage('have')"
+        >Inventory<span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item active">
-        <a class="nav-link" href="#">Wishlist<span class="sr-only">(current)</span></a>
+        <a class="nav-link" href="#" (click)="onSelectPage('want')"
+        >Wishlist<span class="sr-only">(current)</span></a>
       </li>
       <!-- <li class="nav-item">
         <a class="nav-link" href="#">Link</a>
