--- a/src/app/shared/legoset/legoset.component.html
+++ b/src/app/shared/legoset/legoset.component.html
@@ -1,5 +1,9 @@
-<a href="#" class="list-group-item clearfix"
-  (click)="onBricksetSelected()">
+<a
+style="cursor: pointer"
+class="list-group-item clearfix"
+[routerLink]="[idx]"
+routerLinkActive="active"
+>
   <div class="float-left">
     <h4 class="list-group-item-heading">{{ brickset.setName }}</h4>
     <p class="list-group-item-text mb-0">{{ brickset.setNumber }}</p>
