--- a/src/app/have/set-details/set-details.component.html
+++ b/src/app/have/set-details/set-details.component.html
@@ -1,3 +1,10 @@
+<!-- Bind the index from the `*ngFor` loop to a property -->
+<app-legoset *ngFor [brickset]="bricksetElement" [idx]="i"></app-legoset>
+
+<a class="dropdown-item" (click)="onEditBrickset()">Update Set</a>
+<!-- 
+<a class="dropdown-item" (click)="onRemoveBrickset()">Delete Set</a> -->
+
 <div class="row">
   <div class="col-md-12">
     <h2>{{brickset.setName}}</h2>
@@ -18,7 +25,7 @@
 
 <div class="row">
   <div class="col-md-12">
-    <img src="{{brickset.boxArt}}" alt="" class="img-responsive" />
+    <img src="{{brickset.boxArt}}" alt="" class="img-responsive"  style="max-height:200px"/>
   </div>
 </div>
 <div class="row">
@@ -31,6 +38,21 @@
 
 <div class="row">
   <div class="col-md-12">
-    <button type="button" class="btn btn-warning">Edit Book</button>
-  </div>
+    <div class="dropdown" appDropdown>
+      <button
+      class="btn btn-warning dropdown-toggle"
+      type="button"
+      id="dropdownMenuButton"
+      data-toggle="dropdown"
+      role="button"
+      aria-haspopup="true"
+      aria-expanded="false">
+        Edit Set
+      </button>
+      <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+        <a class="dropdown-item">Add Set</a>
+        <a class="dropdown-item">Delete Set</a>
+        <!-- <a class="dropdown-item" href="#">Something else here</a> -->
+      </div>
+    </div>
 </div>
