--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -1,13 +1,13 @@
 <div class="row">
   <div class="col-md-6">
-    <h1>Add to Cart Someday</h1>
+    <h1>Search for a Set</h1>
   </div>
   <div class="col-md-6">
-    <app-lego-search></app-lego-search>
+<app-rebrickable-search></app-rebrickable-search>
   </div>
 </div>
 <div class="row">
   <div class="col-md-12">
-    <app-lego-results></app-lego-results>
+<app-rebrickable-results></app-rebrickable-results>
   </div>
 </div>
