--- a/src/app/shared/navigation/navigation.component.html
+++ b/src/app/shared/navigation/navigation.component.html
@@ -1,5 +1,7 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-  <a class="navbar-brand brand"id="brand" routerLink="/have">Kelley Blue Brick</a>
+
+  <!-- router link & button for landing page -->
+  <a class="navbar-brand brand"id="brand" routerLink="/landing">Kelley Blue Brick</a>
 
   <button
   class="navbar-toggler"
@@ -13,6 +15,7 @@
   <span class="navbar-toggler-icon"></span>
   </button>
 
+
   <div class="collapse navbar-collapse"
   id="navbarSupportedContent">
 
@@ -20,15 +23,15 @@
       <li class="nav-item active">
         <a class="nav-link" routerLink="/have" routerLinkActive="active"
         >Inventory<span class="sr-only">(current)</span></a>
-
       </li>
+
       <li class="nav-item active">
         <a class="nav-link"  routerLink="/want" routerLinkActive="active"
         >Wishlist<span class="sr-only">(current)</span>
         </a>
       </li>
 
-      <li class="nav-item dropdown">
+      <li class="nav-item dropdown" appDropdown>
         <a class="nav-link dropdown-toggle"
         style="cursor: pointer"
         id="navbarDropdown"
@@ -41,19 +44,53 @@
       >
         Settings
         </a>
+        <ul class="dropdown-menu">
+          <li><a class="dropdown-item" style="cursor: pointer" (click)="onSaveData()"
+            >Save Data</a></li>
+          <hr>
+          <li><a class="dropdown-item" style="cursor: pointer" (click)="onFetchData()"
+            >Fetch Data</a></li>
+        </ul>
+      </li>
 
-        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item">Action</a>
-          <a class="dropdown-item">Another action</a>
-          <div class="dropdown-divider"></div>
-          <a class="dropdown-item">Something else here</a>
-        </div>
+      <li class="nav-item">
+        <a class="nav-link" routerLink="/auth" routerLinkActive="active">Login</a>
       </li>
 
     </ul>
-    <form class="form-inline my-2 my-lg-0">
-      <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-      <button class="btn btn-outline-danger my-2 my-sm-0" type="submit">Search</button>
-    </form>
+
+    <!-- <li class="nav-item">
+      <a class="nav-link" routerLink="/landing" routerLinkActive="active"
+        >Library</a>
+    </li> -->
+
+
+
+
+    <form
+  #searchForm="ngForm"
+  (ngSubmit)="onFetchBricksets(searchForm.value.search)" class="form-inline">
+  <div class="form-group mr-2">
+    <!-- SEARCH -->
+    <label for="search" class="sr-only">Search</label>
+    <input
+      type="search"
+      class="form-control"
+      name="search"
+      id="search"
+      placeholder="Find this Set"
+      [(ngModel)]="searchForm.value.search"
+      required
+    />
+  </div>
+
+  <!-- SUBMIT -->
+  <button class="btn btn-danger"
+  type="submit" [disabled]="!searchForm.valid"
+  >
+    Search
+  </button>
+</form>
+
   </div>
 </nav>
