started auth page

--- a/src/app/have/have-editor/have-editor.component.html
+++ b/src/app/have/have-editor/have-editor.component.html
@@ -26,12 +26,12 @@
     <!-- BUTTONS -->
     <button
       type="submit"
-      class="btn btn-primary mr-3"
+      class="btn btn-success mr-3"
       [disabled]="!bricksetFormRef.valid"
     >
       Save
     </button>
-    <button type="button" class="btn btn-warning" (click)="onResetForm()">
+    <button type="button" class="btn btn-danger" (click)="onResetForm()">
       Cancel
     </button>
 
