--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -1,11 +1,15 @@
 <div class="row">
-  <div class="col-md-6">
+  <div class="col-md-12">
+
     <h1>Search for a Set</h1>
+
   </div>
-  <div class="col-md-6">
-<app-rebrickable-search></app-rebrickable-search>
-  </div>
+
+  <!-- <div class="col-md-6">
+    <app-rebrickable-search></app-rebrickable-search>
+  </div> -->
 </div>
+
 <div class="row">
   <div class="col-md-12">
 <app-rebrickable-results></app-rebrickable-results>
