--- a/src/app/landing/rebrickable-results/rebrickable-results.component.html
+++ b/src/app/landing/rebrickable-results/rebrickable-results.component.html
@@ -12,6 +12,6 @@
   </div>
 </div>
 
-<div class="mb-3 row" *ngIf="allSets.length < 1">
+<!-- <div class="mb-3 row" *ngIf="allSets.length < 1">
   <p>No Sets Available</p>
-</div>
+</div> -->
