--- a/src/app/landing/landing.component.css
+++ b/src/app/landing/landing.component.css
@@ -1,17 +1,18 @@
-/* h1{
+h1{
   color: goldenrod;
   display: flex;
   align-items:center;
   justify-content:center;
   padding: 15px;
-} */
+  text-shadow: 2px 2px 8px black ;
+}
 
-h1{
+/* h1{
   color: goldenrod;
   position: fixed;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
   text-shadow: 2px 2px 8px black ;
-}
+} */
 
