--- a/src/app/landing/rebrickable-results/rebrickable-results.component.html
+++ b/src/app/landing/rebrickable-results/rebrickable-results.component.html
@@ -1,12 +1,25 @@
 <div class="row mb-3" *ngIf="allSets.length > 0" >
   <div class="col-md-9" *ngFor="let bricksetEl of allSets">
     <app-legoset [brickset]="bricksetEl"></app-legoset>
-    <button
+    <!-- <button
       class="float-right"
       style="border: none; font-size: 16px"
       (click)="onSaveBrickset(bricksetEl)"
     >
       &plus;
+    </button> -->
+    <button class="btn btn-warning"
+    style="border: none; font-size: 16px"
+    (click)="onSaveInventory(bricksetEl)"
+    >
+    Add to Inventory
+    </button>
+
+    <button class="btn btn-danger"
+    style="border: none; font-size: 16px"
+    (click)="onSaveWishlist(bricksetEl)"
+    >
+    Add to Wishlist
     </button>
 
   </div>
