--- a/src/app/shared/navigation/navigation.component.html
+++ b/src/app/shared/navigation/navigation.component.html
@@ -20,12 +20,12 @@
   id="navbarSupportedContent">
 
     <ul class="navbar-nav mr-auto">
-      <li class="nav-item active">
+      <li class="nav-item active" *ngIf="isAuthenticated">
         <a class="nav-link" routerLink="/have" routerLinkActive="active"
         >Inventory<span class="sr-only">(current)</span></a>
       </li>
 
-      <li class="nav-item active">
+      <li class="nav-item active" *ngIf="isAuthenticated">
         <a class="nav-link"  routerLink="/want" routerLinkActive="active"
         >Wishlist<span class="sr-only">(current)</span>
         </a>
@@ -53,17 +53,14 @@
         </ul>
       </li>
 
-      <li class="nav-item">
+      <li class="nav-item" >
         <a class="nav-link" routerLink="/auth" routerLinkActive="active">Login</a>
+      </li>
+      <li class="nav-item" *ngIf="isAuthenticated" (click)="onSignOut()">
+        <a class="nav-link" routerLink="/auth" routerLinkActive="active">Sign Out</a>
       </li>
 
     </ul>
-
-    <!-- <li class="nav-item">
-      <a class="nav-link" routerLink="/landing" routerLinkActive="active"
-        >Library</a>
-    </li> -->
-
 
 
 
