added detail to landing page

--- a/src/app/have/set-details/set-details.component.html
+++ b/src/app/have/set-details/set-details.component.html
@@ -1,9 +1,10 @@
+
 <!-- Bind the index from the `*ngFor` loop to a property -->
 <app-legoset *ngFor [brickset]="bricksetElement" [idx]="i"></app-legoset>
 
+
 <!-- <a class="dropdown-item" (click)="onEditBrickset()">Update Set</a> -->
-<!--
-<a class="dropdown-item" (click)="onRemoveBrickset()">Delete Set</a> -->
+ <!-- <a class="dropdown-item" (click)="onRemoveBrickset(idx)">Delete Set</a> -->
 
 <div class="row">
   <div class="col-md-12">
@@ -46,8 +47,8 @@
         Edit Set
       </button>
       <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-        <a class="dropdown-item" (click)="onEditBrickset()">Edit Set</a>
-        <!-- <a class="dropdown-item" (click)="onRemoveBrickset(i)">Delete Set</a> -->
+        <!-- <a class="dropdown-item" (click)="onEditBrickset()">Update Set</a> -->
+        <!-- <a class="dropdown-item" (click)="onRemoveBrickset(idx)">Delete Set</a> -->
         <!-- <a class="dropdown-item" href="#">Something else here</a> -->
       </div>
     </div>
