--- a/src/app/have/set-list/set-list.component.html
+++ b/src/app/have/set-list/set-list.component.html
@@ -8,6 +8,6 @@
     >
       &minus;
     </button>
-    <button class="btn btn-primary" (click)="onNewBrickset()">Add New Set</button>
+    <!-- <button class="btn btn-primary" (click)="onNewBrickset()">Add New Set</button> -->
   </div>
 </div>
