--- a/src/app/want/want.component.html
+++ b/src/app/want/want.component.html
@@ -1,13 +1,14 @@
 <div class="row">
-  <div class="col-md-6">
+  <div class="col-md-12">
     <h1>Add to Cart Someday</h1>
   </div>
-  <div class="col-md-6">
+
+  <!-- <div class="col-md-6">
     <app-lego-search></app-lego-search>
-  </div>
+  </div> -->
 </div>
-<div class="row">
+<!-- <div class="row">
   <div class="col-md-12">
     <app-lego-results></app-lego-results>
   </div>
-</div>
+</div> -->
