--- a/src/app/landing/landing.component.css
+++ b/src/app/landing/landing.component.css
@@ -16,3 +16,38 @@ h1{
   text-shadow: 2px 2px 8px black ;
 } */
 
+/* blue box */
+.box {
+  margin-top: 2em;
+  background-color: rgba(46, 71, 180, 0.8);
+  height: 30em;
+  width: 40em;
+  text-align: center;
+  box-shadow: 0px 0px 25px rgb(245, 203, 15);
+  padding: 1em;
+
+}
+
+/* yellow box */
+  .slogan {
+    margin-top: 2em;
+    margin-left: auto;
+    margin-right: auto;
+    background-color: rgba(245,203, 15);
+    height: 15em;
+    width: 30em;
+    text-align: center;
+    box-shadow: 0px 0px 25px rgb(3, 20, 61);
+    padding: 1em;
+    }
+
+    /* all boxes */
+  .container{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
+p{
+  text-align: right;
+}
