--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -1,17 +1,22 @@
-<div class="row">
-  <div class="col-md-12">
+<div class="container">
+  <div class="box">
+    <div class="row">
+      <div class="col-md-12">
+        <div class="slogan"><h2>Inspire and develop the builders of tomorrow.<br><br>
+          “Leg Godt” - "Play Well"</h2><br>
+          <p>-The Lego Group</p>
+        </div>
+      </div>
+    </div>
 
-    <h1>Play Well</h1>
-
+    <div class="col-md-12">
+      <app-rebrickable-search></app-rebrickable-search>
+    </div>
   </div>
-
-  <!-- <div class="col-md-6">
-    <app-rebrickable-search></app-rebrickable-search>
-  </div> -->
 </div>
 
 <div class="row">
   <div class="col-md-12">
-<app-rebrickable-results></app-rebrickable-results>
+    <app-rebrickable-results></app-rebrickable-results>
   </div>
 </div>
