--- a/src/app/landing/rebrickable-search/rebrickable-search.component.html
+++ b/src/app/landing/rebrickable-search/rebrickable-search.component.html
@@ -1,9 +1,9 @@
-<!-- <form
+<form
   #searchForm="ngForm"
   (ngSubmit)="onFetchBricksets(searchForm.value.search)" class="form-inline">
-  <div class="form-group mr-2"> -->
+  <div class="form-group mr-2">
     <!-- SEARCH -->
-    <!-- <label for="search" class="sr-only">Search</label>
+    <label for="search" class="sr-only">Search</label>
     <input
       type="search"
       class="form-control"
@@ -13,10 +13,10 @@
       [(ngModel)]="searchForm.value.search"
       required
     />
-  </div> -->
+  </div>
 
   <!-- SUBMIT -->
-  <!-- <button class="btn btn-primary" type="submit" [disabled]="!searchForm.valid">
+ <button class="btn btn-warning" type="submit" [disabled]="!searchForm.valid">
     Search
   </button>
-</form> -->
+</form>
