--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -20,3 +20,9 @@
     <app-rebrickable-results></app-rebrickable-results>
   </div>
 </div>
+
+<!-- Alert -->
+<app-alert
+  [alertMsg]="alert"
+  *ngIf="alert"
+  [closeModal]="handleCloseModal()"></app-alert>
