--- a/src/app/landing/rebrickable-results/rebrickable-results.component.html
+++ b/src/app/landing/rebrickable-results/rebrickable-results.component.html
@@ -28,3 +28,7 @@
 <!-- <div class="mb-3 row" *ngIf="allSets.length < 1">
   <p>No Sets Available</p>
 </div> -->
+<!-- <app-alert
+  [alertMsg]="alert"
+  *ngIf="allSets.length < 1"
+  [closeModal]="handleCloseModal()"></app-alert> -->
