--- a/src/app/want/want.component.html
+++ b/src/app/want/want.component.html
@@ -1,14 +1,12 @@
-<div class="row">
-  <div class="col-md-12">
+<div class="row justify-content-between">
+  <div class="col-md-8">
     <h1>Add to Cart Someday</h1>
+   <app-set-wishlist></app-set-wishlist>
   </div>
+  <div class="col-md-4">
 
-  <!-- <div class="col-md-6">
-    <app-lego-search></app-lego-search>
-  </div> -->
-</div>
-<!-- <div class="row">
-  <div class="col-md-12">
-    <app-lego-results></app-lego-results>
+<router-outlet></router-outlet>
+
+
   </div>
-</div> -->
+</div>
