--- a/src/app/shared/navigation/navigation.component.css
+++ b/src/app/shared/navigation/navigation.component.css
@@ -1,3 +1,16 @@
 .dropdown-menu{
   text-align: center;
 }
+
+/* .navbar {
+  text-shadow: 1px 1px 2px black;
+} */
+
+/* .nav-link:hover {
+  color: rgba(245,203, 15);
+}
+
+.nav-link.active {
+  color:  rgba(245,203, 15);
+  text-shadow: 1px 1px 2px black;
+} */
