--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,8 +1,5 @@
 .container {
-  background: linear-gradient(rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0.1)),
-  url("/assets/brick-background.jpg");
-  height: 100vh;
-  background-position: center;
-  background-repeat: no-repeat;
+  background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.1)), url("/assets/brick-background.jpg") no-repeat center
+  center fixed ;
   background-size: cover;
 }
