--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,5 +1,5 @@
-.container {
+/* .container {
   background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.1)), url("/assets/brick-background.jpg") no-repeat center
   center fixed ;
   background-size: cover;
-}
+} */
