--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -1,5 +1,5 @@
-<footer class="page-footer font-small purple pt-4 fixed-bottom">
-  <ul> Project By:
+<footer class="page-footer font-small pt-3 fixed-bottom">
+  <p> Project By:
      <a href="https://github.com/Roogert" target="_blank">Sam McCallister</a>
-  </ul>
+  </p>
 </footer>
